--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 	<title>Lesson 4</title>
 </head>
 <body>
-
+	<header>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html">Home</a>
+				</li>
+				<li>
+					<a href="index.html">News</a>
+				</li>
+				<li>
+					<a href="index.html">Blog</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 </body>
 </html>
