add header, sections, footer, colors and arrangement

--- a/index.html
+++ b/index.html
@@ -7,21 +7,280 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>
-		<a href="index.html">Logo</a>
-		<nav>
-			<ul>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="index.html">News</a>
-				</li>
-				<li>
-					<a href="index.html">Blog</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
+	<div>
+		<header>
+			<div class="header-logo">
+				<img src="images/Ai.png" alt="Adobe ilustrator Logo">
+			</div>
+			<div>
+				<nav>
+					<ul>
+						<li>
+							<a class="navigation" href="index.html">
+								Main
+							</a>
+						</li>
+						<li>
+							<a class="navigation" href="index.html">
+								News
+							</a>
+						</li>
+						<li>
+							<a class="navigation" href="index.html">
+								Contact
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<section>
+			<div>
+				<table>
+					<thead>
+						<tr>
+							<th>
+								სახელი
+							</th>
+							<th>
+								გვარი
+							</th>
+							<th>
+								ასაკი
+							</th>
+							<th>
+								პროფესია
+							</th>
+							<th>
+								საცხოვრებელი ქალაქი
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+						<tr>
+							<td>
+								გიორგი
+							</td>
+							<td>
+								ქობულაშვილი
+							</td>
+							<td>
+								32
+							</td>
+							<td>
+								ვებ დეველოპერი
+							</td>
+							<td>
+								თბილისი
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</section>
+		<section>
+			<div class="register">
+				<form>
+					<div>
+						<h3>
+							შეავსეთ სარეგისტრაციო ფორმა
+						</h3>
+						<label class="name" for="First name">სახელი</label>
+						<input type="text" name="First name" placeholder="შეიყვანეთ სახელი" id="First name">
+					</div>
+					<div class="surname">
+						<label class="last-name" for="Last name">გვარი</label>
+						<input type="text" name="Last name" placeholder="შეიყვანეთ გვარი" id="Last name">
+					</div>
+					<div class="password">
+						<label class="pass" for="Password">პაროლი</label>
+						<input type="Password" name="Password " placeholder="შეიყვანეთ პაროლი" id="Password ">
+					</div>
+					<div class="repeat-password">
+						<label class="rep-pass" for="First name">გაიმეორეთ პაროლი</label>
+						<input type="Password" name=" Password" placeholder="გაიმეორეთ პაროლი" id="Password">
+					</div>
+					<button>
+						Register
+					</button>
+				</form>
+			</div>
+		</section>
+		<footer>
+			<div class="FB-logo">
+				<a href="https://facebook.com/">
+					<img src="images/FB.png" alt="Facebook logo">
+				</a>
+			</div>
+			<div class="Insta-logo">
+				<a href="https://instagram.com/">
+					<img src="images/instagram.png" alt="Instagram logo">
+				</a>
+			</div>
+			<div class="Youtube-logo">
+				<a href="https://youtube.com/">
+					<img src="images/Youtube.png" alt="Youtube logo">
+				</a>
+			</div>
+			<div class="Twitter-logo">
+				<a href="https://twitter.com">	
+					<img src="images/Twitter.png" alt="Twitter logo">
+				</a>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
