fix instagram logo problem

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 			</div>
 			<div class="Insta-logo">
 				<a href="https://instagram.com/">
-					<img src="images/instagram.png" alt="Instagram logo">
+					<img src="images/Instagram.png" alt="Instagram logo">
 				</a>
 			</div>
 			<div class="Youtube-logo">
