made short code with classes in form

--- a/index.html
+++ b/index.html
@@ -241,15 +241,19 @@
 						<label class="name" for="First name">სახელი</label>
 						<input type="text" name="First name" placeholder="შეიყვანეთ სახელი" id="First name">
 					</div>
-					<div class="surname">
-						<label class="last-name" for="Last name">გვარი</label>
+					<div class="last-name">
+						<label class="last-name" for="surname">გვარი</label>
 						<input type="text" name="Last name" placeholder="შეიყვანეთ გვარი" id="Last name">
 					</div>
+					<div class="email">
+						<label class="email" for="email">მეილი</label>
+						<input type="email" name="email" placeholder="შეიყვანეთ მეილი" id="email">
+					</div>
 					<div class="password">
-						<label class="pass" for="Password">პაროლი</label>
+						<label class="password" for="Password">პაროლი</label>
 						<input type="Password" name="Password " placeholder="შეიყვანეთ პაროლი" id="Password ">
 					</div>
-					<div class="repeat-password">
+					<div class="rep-pass">
 						<label class="rep-pass" for="First name">გაიმეორეთ პაროლი</label>
 						<input type="Password" name=" Password" placeholder="გაიმეორეთ პაროლი" id="Password">
 					</div>
